add queue despair post

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta name=referrer content=origin>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content="Elixir, Go, Node, Testing, Design and Performance">
+<meta name=description content="Programming blog exploring Rust, Elixir, Go, Testing, Design and Performance">
 <link href=atom.xml rel=alternate type=application/atom+xml>
 
 <style>
