--- a/src/atom.njk
+++ b/src/atom.njk
@@ -6,8 +6,8 @@ permalink: "/atom.xml"
 <feed xmlns="http://www.w3.org/2005/Atom">
 	<title>Karl Seguin</title>
 	<subtitle>{{ metadata.subtitle }}</subtitle>
-	<link href="http://www.openmymind.net/atom.xml" rel="self"/>
-	<link href="http://www.openmymind.net/"/>
+	<link href="https://www.openmymind.net/atom.xml" rel="self"/>
+	<link href="https://www.openmymind.net/"/>
 	<updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
 	<id>https://www.openmymind.net/</id>
 	<author><name>Karl Seguin</name></author>
