--- a/src/sitemap.liquid
+++ b/src/sitemap.liquid
@@ -4,7 +4,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 	<url><loc>https://www.openmymind.net/</loc><lastmod>{{ latest | date: dateFormat }}</lastmod></url>
-	<url><loc>https://www.openmymind.net/atom.rss</loc><lastmod>{{ latest | date: dateFormat }}</lastmod></url>
+	<url><loc>https://www.openmymind.net/atom.xml</loc><lastmod>{{ latest | date: dateFormat }}</lastmod></url>
 	{% for post in posts %}<url><loc>https://www.openmymind.net{{ post.url }}</loc><lastmod>{{ post.date | date: dateFormat}}</lastmod></url>
 	{% endfor %}
 </urlset>
