update all internal links to https

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -30,7 +30,7 @@ main b {display: block;font-weight: normal;font-size: 90%;color: #555}
 	main{width: 100%; padding: 0}
 }
 </style>
-<ul id=l><li><a href=atom.xml>rss</a><li><li><a href=mailto:blog@karlseguin.com>contact</a><li><li><a href=https://www.whysolazy.com>free apis</a><li><a href=https://twitter.com/karlseguin>twitter</a></ul>
+<ul id=l><li><a href=atom.xml>atom</a><li><li><a href=mailto:blog@karlseguin.com>contact</a><li><li><a href=https://www.whysolazy.com>free apis</a><li><a href=https://twitter.com/karlseguin>twitter</a><li><a href=https://www.goblgobl.com>tech links</a><li></ul>
 <h1><a href=#>Hi</a></h1>
 <main>
 {% assign posts = collections.all | public | reverse %}
