add elixir without ecto dynamic queries

--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -47,7 +47,7 @@ code br {border: 1px solid red}
 
 <a href=/>home</a>
 <main>
-<h1>{{ title | safe }}</h1>
+<h1>{{ title }}</h1>
 <div id=byline>{{ page.date | date: "%d %b %y" }}</div>
 <article>{{ content }}</article>
 </main>
