--- a/src/index.liquid
+++ b/src/index.liquid
@@ -8,31 +8,27 @@
 <link href=atom.xml rel=alternate type=application/atom+xml>
 
 <style>
+@font-face {
+	font-family: 'lato';
+	src: url(/assets/lato.woff2) format('woff2');
+}
 *{padding:0;margin:0;}
-body{font-family:sans-serif;font-size: 22px;padding: 0 20px}
-ul{list-style:none;padding:0;}
+body{font-family:lato, sans-serif;font-size: 26px;display: flex; flex-direction: column;}
 a{text-decoration:none;color:#111;}
 a:hover{text-decoration:underline;color:#000;}
 
-#l{display:block; float:right;background:#f6f6f6;border-radius: 0 0 5px 5px}
-#l li{float:left;font-size: 85%}
-#l a{padding: 10px 25px;border-right:1px solid #fff;display: inline-block;}
-#l a:hover{background:#d6d6d6;}
-#l li:first-of-type a:hover{border-bottom-left-radius: 5px}
-#l li:last-of-type a:hover{border-bottom-right-radius: 5px}
+ul{font-size: 85%; list-style:none; display: flex; justify-content: right;}
+ul a{display: inline-block; color:#2c57d7;padding: 10px 20px}
 
-h1{color:#000; width: 800px; margin: 0 auto;}
-main{margin-top: 10px; width: 800px; margin: 0 auto;}
-main a {display: block;padding: 10px 0 5px;margin-top: 20px}
-main b {display: block;font-weight: normal;font-size: 90%;color: #555}
+main{margin: 0 auto;padding: 10px 0 0 20px;max-width: 1000px}
+main a {display: block;padding-bottom: 5px; color: #444}
+main b {display: block;font-weight: normal;font-size: 18px;color: #555;padding-bottom: 50px}
 
 @media screen and (max-width: 800px) {
-	#l a{padding: 10px;}
-	main{width: 100%; padding: 0}
+	ul a{padding: 10px}
 }
 </style>
-<ul id=l><li><a href=atom.xml>atom</a><li><li><a href=mailto:blog@karlseguin.com>contact</a><li><li><a href=https://www.whysolazy.com>free apis</a><li><a href=https://twitter.com/karlseguin>twitter</a><li><a href=https://www.goblgobl.com>tech links</a><li></ul>
-<h1><a href=#>Hi</a></h1>
+<ul><li><a href=atom.xml>atom</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://twitter.com/karlseguin>twitter</a><li><a href=https://www.whysolazy.com>free apis</a><li><a href=https://www.goblgobl.com>tech links</a></ul>
 <main>
 {% assign posts = collections.all | public | reverse %}
 {%- for post in posts -%}<a href={{ post.url }}>{{ post.data.title }}</a><b>{{ post.date | date: "%d %b %y" }} - {% if post.data.tags %}{{ post.data.tags | join: ', ' }} {% endif %}</b>{%- endfor -%}
