remove custom font

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -8,12 +8,8 @@
 <link href=atom.xml rel=alternate type=application/atom+xml>
 
 <style>
-@font-face {
-	font-family: 'lato';
-	src: url(/assets/lato.woff2) format('woff2');
-}
 *{padding:0;margin:0;}
-body{font-family:lato, sans-serif;font-size: 26px;display: flex; flex-direction: column;}
+body{font-family:sans-serif;font-size: 26px;display: flex; flex-direction: column;}
 a{text-decoration:none;color:#111;}
 a:hover{text-decoration:underline;color:#000;}
 
@@ -22,7 +18,7 @@ ul a{display: inline-block; color:#2c57d7;padding: 10px 20px}
 
 main{margin: 0 auto;padding: 10px 0 0 20px;max-width: 1000px}
 main a {display: block;padding-bottom: 5px; color: #444}
-main b {display: block;font-weight: normal;font-size: 18px;color: #555;padding-bottom: 50px}
+main b {display: inline-block;font-weight: normal;font-size: 18px;color: #555;padding-bottom: 50px}
 
 @media screen and (max-width: 800px) {
 	ul a{padding: 10px}
