--- a/src/index.liquid
+++ b/src/index.liquid
@@ -26,6 +26,8 @@ main b {display: inline-block;font-weight: normal;font-size: 18px;color: #555;pa
 </style>
 <ul><li><a href=atom.xml>atom</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://twitter.com/karlseguin>twitter</a><li><a href=https://www.whysolazy.com>free apis</a><li><a href=https://links.openmymind.net>tech links</a></ul>
 <main>
-{% assign posts = collections.all | public | reverse %}
-{%- for post in posts -%}<a href={{ post.url }}>{{ post.data.title }}</a><b>{{ post.date | date: "%d %b %y" }}</b>{%- endfor -%}
+{%- assign posts = collections.all | public | reverse -%}
+{%- for post in posts %}
+<a href={{ post.url }}>{{ post.data.title }}</a><b>{{ post.date | date: "%d %b %y" }}</b>
+{%- endfor -%}
 </main>
