--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -8,14 +8,14 @@
 <style>
 html {box-sizing: border-box;}
 *, *:before, *:after {box-sizing: inherit;}
-body{background:#fff;font-family:sans-serif;font-size: 28px;padding: 0; margin: 0}
+body{background:#fff;font-family:sans-serif;font-size: 24px;padding: 0; margin: 0}
 body > a {background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;left: 0}
 
 ul li {line-height: 36px}
 p, pre, li{line-height: 48px;}
 blockquote{line-height: 36px; border-left: 10px solid #ddd; margin: 0; padding-left: 25px}
-h3, h4{margin: 0}
-h3 + p, h4 + p{margin-top: 5px}
+h2, h3, h4{margin: 0}
+h2 + p, h3 + p, h4 + p{margin-top: 5px}
 main{width: 1000px; margin: 0 auto;}
 h1{font-size: 150%; margin: 0}
 #byline{color: #555;font-size: 80%;margin-top: 5px}
