small tweaks, add rss in addition to atom

--- a/src/atom.njk
+++ b/src/atom.njk
@@ -5,7 +5,7 @@ permalink: "/atom.xml"
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
 	<title>Karl Seguin</title>
-	<subtitle>{{ metadata.subtitle }}</subtitle>
+	<subtitle>Programming blog exploring Elixir, Go, Testing, Design and Performance</subtitle>
 	<link href="https://www.openmymind.net/atom.xml" rel="self"/>
 	<link href="https://www.openmymind.net/"/>
 	<updated>{{ collections.posts | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
