--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -9,7 +9,7 @@
 html {box-sizing: border-box;}
 *, *:before, *:after {box-sizing: inherit;}
 body{background:#fff;font-family:sans-serif;font-size: 24px;padding: 0; margin: 0}
-body > a {background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;left: 0}
+body > a {background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;right: 0}
 
 ul li {line-height: 36px}
 p, pre, li{line-height: 40px;}
