new post: regular expressions in Zig

--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -48,6 +48,6 @@ code br {border: 1px solid red}
 <a href=/>home</a>
 <main>
 <h1>{{ title }}</h1>
-<div id=byline>{{ page.date | date: "%d %b %y" }}</div>
+<div id=byline>{{ page.date | date: "%b %d, %Y" }}</div>
 <article>{{ content }}</article>
 </main>
