--- a/src/index.njk
+++ b/src/index.njk
@@ -29,7 +29,7 @@ code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px soli
 	ul a{padding: 10px}
 }
 </style>
-<ul><li><a href=atom.xml>rss</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://twitter.com/karlseguin>twitter</a><li><a href=https://www.github.com/karlseguin>github</a></ul>
+<ul><li><a href=atom.xml>rss</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://www.aolium.com/karlseguin>aolium</a><li><a href=https://www.github.com/karlseguin>github</a></ul>
 <main>
 {%- set posts = all_posts(collections.all, aolium) -%}
 {%- for post in posts %}
