--- a/src/index.njk
+++ b/src/index.njk
@@ -9,20 +9,23 @@
 
 <style>
 *{padding:0;margin:0;}
-body{font-family:sans-serif;font-size: 20px;display: flex; flex-direction: column;}
-a{text-decoration:none;color:#ff42af;}
+body{font-family:sans-serif;font-size: 20px;}
+a{text-decoration:none;color:#3063df;}
 a:hover{text-decoration:underline;color:#000;}
 
 ul{font-size: 85%; list-style:none; display: flex; justify-content: right;}
 ul a{display: inline-block; padding: 10px 20px}
 
-main{margin: 0 auto;padding: 10px 0 0 20px;max-width: 1000px}
-main a {display: block;padding-bottom: 5px;}
-main b {display: inline-block;font-weight: normal;font-size: 18px;color: #555;padding-bottom: 30px}
+main{margin: 20px auto;padding: 10px 0 0 20px;max-width: 760px}
+main > div {border-top: 1px solid #ddd; display: flex; margin: 5px 0}
+main > div:first-of-type{border: 0}
+main > div > a { flex: auto; padding: 15px 0;}
+main b {font-weight: normal;font-size: 16px;color: #666;margin-left: auto; align-self: center; white-space: nowrap}
+div.s + div:not([class=s]) {border-top: 0}
 
-.s {border-left: 10px solid #ddd; margin-bottom: 30px; padding: 0 10px; margin-left: -20px}
-.s p {margin: 15px 0;line-height: 26px}
-.s > a {font-size: 18px;color: #555}
+.s {border: 10px solid #eee;padding: 10px;margin:10px -20px}
+.s b {align-self: flex-start;}
+main p {margin: 15px 0;line-height: 26px}
 code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px solid #e9e9e5;}
 
 @media screen and (max-width: 800px) {
@@ -34,12 +37,9 @@ code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px soli
 {%- set posts = all_posts(collections.all, aolium) -%}
 {%- for post in posts %}
 {%- if post.inline %}
-<div class=s>
-	<div>{{ post.content | safe }}</div>
-	<a href={{post.url}}>{{ post.date | post_date }}</a>
-</div>
+<div class=s><div>{{ post.content | safe }}</div><b>{{ post.date | post_date }}</b></div>
 {%- else -%}
-<a href={{ post.url }}>{{ post.title }}</a><b>{{ post.date | post_date }}</b>
+<div><a href={{ post.url }}>{{ post.title }}</a><b>{{ post.date | post_date }}</b></div>
 {%- endif -%}
 {%- endfor -%}
 </main>
