--- a/src/index.njk
+++ b/src/index.njk
@@ -29,7 +29,9 @@ main p {margin: 15px 0;line-height: 26px}
 code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px solid #e9e9e5;}
 
 @media screen and (max-width: 800px) {
+	main{margin-right: 10px}
 	ul a{padding: 10px}
+	div.s{margin: 10px 0}
 }
 </style>
 <ul><li><a href=atom.xml>rss</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://www.aolium.com/karlseguin>aolium</a><li><a href=https://www.github.com/karlseguin>github</a></ul>
