--- a/src/index.njk
+++ b/src/index.njk
@@ -18,7 +18,7 @@ ul a{display: inline-block; padding: 10px 20px}
 
 main{margin: 5px auto;padding: 10px 0 0 20px;max-width: 760px}
 main > div {border-top: 1px solid #ddd; display: flex; margin: 5px 0}
-main > div:first-of-type{border: 0}
+main > div:not(.s):first-of-type{border: 0}
 main > div > a { flex: auto; padding: 15px 0;}
 main > div > a > span {color: #666}
 main > div > b {font-weight: normal;font-size: 16px;color: #666;margin-left: auto; align-self: center; white-space: nowrap}
