--- a/src/index.njk
+++ b/src/index.njk
@@ -24,8 +24,8 @@ main > div > a > span {color: #666}
 main > div > b {font-weight: normal;font-size: 16px;color: #666;margin-left: auto; align-self: center; white-space: nowrap}
 div.s + div:not([class=s]) {border-top: 0}
 
-.s {border: 10px solid #eee;padding: 10px;margin:10px -20px}
-.s > b {align-self: flex-start;}
+.s {border: 10px solid #eee;padding: 10px;margin:10px -20px; display: block}
+.s > b {float: right}
 main p {margin: 15px 0;line-height: 26px}
 code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px solid #e9e9e5;}
 
@@ -40,7 +40,7 @@ code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px soli
 {%- set posts = all_posts(collections.all, aolium) -%}
 {%- for post in posts %}
 {%- if post.type == 'simple' %}
-<div class=s><div>{{ post.content | safe }}</div><b>{{ post.date | post_date }}</b></div>
+<div class=s><b>{{ post.date | post_date }}</b><div>{{ post.content | safe }}</div></div>
 {%- elif post.type == 'link'  %}
 <div><a href={{ post.url }}>{{ post.title }}<span> - {{ post.url | extract_domain }}</span></a><b> {{ post.date | post_date }}</b></div>
 {%- else -%}
