--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@
 
 <style>
 *{padding:0;margin:0;}
-body{font-family:sans-serif;font-size: 20px;}
+body{font-family:sans-serif;font-size: 18px;}
 a{text-decoration:none;color:#3063df;}
 a:hover{text-decoration:underline;color:#000;}
 
@@ -17,14 +17,14 @@ ul{font-size: 85%; list-style:none; display: flex; justify-content: right;}
 ul a{display: inline-block; padding: 10px 20px}
 
 main{margin: 5px auto;padding: 10px 0 0 20px;max-width: 760px}
-main > div {border-top: 1px solid #ddd; display: flex; margin: 5px 0}
-main > div:not(.s):first-of-type{border: 0}
-main > div > a { flex: auto; padding: 15px 0;}
-main > div > a > span {color: #666}
+main > div {border-bottom: 1px solid #000; display: flex; padding: 15px 0}
+main > div:not(.s):last-of-type{border: 0}
+main > div > a { flex: auto;}
+main > div > a > span {color: #666;font-size:80%}
 main > div > b {font-weight: normal;font-size: 16px;color: #666;margin-left: auto; align-self: center; white-space: nowrap}
 div.s + div:not([class=s]) {border-top: 0}
 
-.s {border: 10px solid #eee;padding: 10px;margin:10px -20px; display: block}
+.s {padding:10px 0;display: block}
 .s > b {float: right}
 main p {margin: 15px 0;line-height: 26px}
 code { padding: 0 3px; border-radius: 4px; background: #fffce3; border: 1px solid #e9e9e5;}
