--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -8,16 +8,16 @@
 <style>
 html {box-sizing: border-box;}
 *, *:before, *:after {box-sizing: inherit;}
-body{background:#fff;font-family:sans-serif;font-size: 24px;padding: 0; margin: 0}
+body{background:#fff;font-family:sans-serif;font-size: 20px;padding: 0; margin: 0}
 body > a {background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;right: 0}
 
-ul li {line-height: 36px}
-p, pre, li{line-height: 40px;}
-blockquote{line-height: 36px; border-left: 10px solid #ddd; margin: 0; padding-left: 25px}
+ul li {line-height: 32px}
+p, pre, li{line-height: 32px;}
+blockquote{line-height: 32px; border-left: 10px solid #ddd; margin: 0; padding-left: 25px}
 h2, h3, h4{margin: 0}
 h2 + p, h3 + p, h4 + p{margin-top: 5px}
 main{width: 1000px; margin: 0 auto;}
-h1{font-size: 150%; margin: 0}
+h1{font-size: 150%; margin: 20px 0 0}
 #byline{color: #555;font-size: 80%;margin-top: 5px}
 
 pre{padding:10px 0;font-size: 80%;color:#000;margin-left: calc((100vw - 1000px) / -2 + 10px); width: calc(100vw - 20px); padding-left: calc((100vw - 1000px) / 2);}
@@ -26,15 +26,16 @@ p code{padding:2px 5px;background:#f6f6f6;border-radius: 4px;}
 code[class*="language-"],pre[class*="language-"]{background:hsl(230,1%,98%);color:hsl(230,8%,24%);font-family:monospace;direction:ltr;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;line-height:1.5;tab-size:2;hyphens:none}code[class*="language-"]::-moz-selection,code[class*="language-"] ::-moz-selection,pre[class*="language-"] ::-moz-selection{background:hsl(230,1%,90%);color:inherit}code[class*="language-"]::selection,code[class*="language-"] ::selection,pre[class*="language-"] ::selection{background:hsl(230,1%,90%);color:inherit}:not(pre) > code[class*="language-"]{padding:.2em .3em;border-radius:.3em;white-space:normal}.token.comment,.token.prolog,.token.cdata{color:hsl(230,4%,64%)}.token.doctype,.token.punctuation,.token.entity{color:hsl(230,8%,24%)}.token.attr-name,.token.class-name,.token.boolean,.token.constant,.token.number,.token.atrule{color:hsl(35,99%,36%)}.token.keyword{color:hsl(301,63%,40%)}.token.property,.token.tag,.token.symbol,.token.deleted,.token.important{color:hsl(5,74%,59%)}.token.selector,.token.string,.token.char,.token.builtin,.token.inserted,.token.regex,.token.attr-value,.token.attr-value > .token.punctuation{color:hsl(119,34%,47%)}.token.variable,.token.operator,.token.function{color:hsl(221,87%,60%)}.token.url{color:hsl(198,99%,37%)}.token.attr-value > .token.punctuation.attr-equals,.token.special-attr > .token.attr-value > .token.value.css{color:hsl(230,8%,24%)}.language-css .token.selector{color:hsl(5,74%,59%)}.language-css .token.property{color:hsl(230,8%,24%)}.language-css .token.function,.language-css .token.url > .token.function{color:hsl(198,99%,37%)}.language-css .token.url > .token.string.url{color:hsl(119,34%,47%)}.language-css .token.important,.language-css .token.atrule .token.rule{color:hsl(301,63%,40%)}.language-javascript .token.operator{color:hsl(301,63%,40%)}.language-javascript .token.template-string > .token.interpolation > .token.interpolation-punctuation.punctuation{color:hsl(344,84%,43%)}.language-json .token.operator{color:hsl(230,8%,24%)}.language-json .token.null.keyword{color:hsl(35,99%,36%)}.token.bold{font-weight:700}.token.comment,.token.italic{font-style:italic}.token.entity{cursor:help}.token.namespace{opacity:.8}
 code br {border: 1px solid red}
 
-#pager {clear: both; display: flex; padding: 50px 0;}
-#pager a {flex: 50%;padding: 15px; border: 1px solid #ddd; border-radius: 4px;text-decoration: none; color: #fd25a0;}
-#pager a:not(:empty):hover{background: #eee	}
-#pager .prev {margin-right: 10px;}
-#pager .prev:not(:empty):before{content: '« '}
-#pager :empty{border: none}
+.pager {display: flex;}
+.pager:last-of-type {margin-top: 50px;}
 
-#pager .next:not(:empty):after{content: ' »'}
-#pager .next {text-align: right;margin-left: 10px}
+.pager span {flex: 50%}
+.pager a {flex: 50%; color: #fd25a0; padding: 0 10px; line-height: 50px; border-radius: 4px; border: 1px solid #ccc; text-decoration: none; }
+.pager a:hover{background: #eee; border-color: #bbb;}
+.pager .prev {margin-right: 10px;}
+.pager .prev:not(:empty):before{content: '« '}
+.pager .next:not(:empty):after{content: ' »'}
+.pager .next {text-align: right;margin-left: 10px}
 
 @media screen and (max-width: 1000px) {
 	body > a {position: relative;}
