--- a/src/_includes/learning_zig.liquid
+++ b/src/_includes/learning_zig.liquid
@@ -34,9 +34,9 @@ h1 a:hover:before, h2 a:hover:before, h3 a:hover:before {display: inline-block;}
 .pager a:hover {background: #eee;border-color: #bbb;}
 .pager .prev {margin-right: 10px;}
 .pager .home {text-align: center; flex: 100px}
+.pager .next {text-align: right;margin-left: 10px;}
 .pager .prev:not(:empty):before {content: "« ";}
 .pager .next:not(:empty):after {content: " »";}
-.pager .next {text-align: right;margin-left: 10px;}
 
 p code, li code, aside code {padding: 0px 3px;border-radius: 5px;background: #fffce3;border: 1px solid #e9e9e5;}
 
@@ -48,5 +48,15 @@ p code, li code, aside code {padding: 0px 3px;border-radius: 5px;background: #ff
  */
 code[class*=language-],pre[class*=language-]{color:#f8f8f2;background:0 0;text-shadow:0 1px rgba(0,0,0,.3);font-family:Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto;border-radius:.3em}:not(pre)>code[class*=language-],pre[class*=language-]{background:#282a36}:not(pre)>code[class*=language-]{padding:.1em;border-radius:.3em;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#b3c2f0}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.punctuation,.token.url,.token.variable{color:#f8f8f2}.namespace{opacity:.7}.token.constant,.token.deleted,.token.property,.token.symbol,.token.tag{color:#ff79c6}.token.boolean,.token.number{color:#bd93f9}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#a8ff60}.token.atrule,.token.attr-value,.token.class-name,.token.function{color:#f1fa8c}.token.keyword{color:#8be9fd}.token.important,.token.regex{color:#ffb86c}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}
 pre[class*=language-] {font-size: 16px;margin-bottom: 30px;}
+
+@media screen and (max-width: 1000px) {
+  .pager{flex-direction: column;}
+  .pager .home {flex: auto}
+  .pager a{text-align: center !important; margin: 0 !important}
+  .pager .next{}
+  main{width: 100%; padding: 10px}
+  code[class*="language-"],
+  pre[class*="language-"], pre{margin-left: 0; white-space: pre-wrap; word-break: break-word}
+}
 </style>
 <main>{{ content }}</main>
