new blog post std.json.Parsed

--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -19,6 +19,7 @@ ol, ul {margin-left: 30px;}
 li {line-height: 30px;}
 p {margin: 16px 0;line-height: 32px;}
 blockquote{line-height: 32px; border-left: 10px solid #ddd; margin: 0; padding-left: 25px}
+aside{padding: 0 10px; border-radius: 4px;background:#f6f6f6;border: 1px solid #ddd;}
 h1, h2, h3 {outline: 0;margin: 30px 0 5px;}
 h1 {font-size: 28px;}
 h2 {font-size: 24px;}
