--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -8,11 +8,10 @@
 <style>
 * {margin: 0; padding: 0; }
 *, *:before, *:after {box-sizing: border-box;}
-body {color: #333;background: #fff;font: 20px "Helvetica Neue", sans-serif;}
 main {width: 800px;margin: 20px auto;}
 
 #byline{color: #555;font-size: 90%;margin: 10px 0}
-body{background:#fff;font-family:sans-serif;font-size: 20px;padding: 0; margin: 0}
+body{background:#fff;font-family:"Helvetica Neue", sans-serif;font-size: 18px;padding: 0; margin: 0}
 body > a {background:#444;color:#fff;padding:10px;text-decoration:none;display: inline-block;position: absolute;top: 0;right: 0}
 
 ol, ul {margin-left: 30px;}
