zig hash maps part 2

--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -18,7 +18,7 @@ ol, ul {margin-left: 30px;}
 li {line-height: 30px;}
 p {margin: 16px 0;line-height: 32px;}
 blockquote{line-height: 32px; border-left: 10px solid #ddd; margin: 0; padding-left: 25px}
-aside{padding: 0 10px; border-radius: 4px;background:#f6f6f6;border: 1px solid #ddd;}
+aside{padding: 0 10px; border-radius: 4px;background:#fffefa;border: 1px solid #b1dfe1;}
 h1, h2, h3 {outline: 0;margin: 30px 0 5px;}
 h1 {font-size: 28px;}
 h2 {font-size: 24px;}
@@ -52,15 +52,10 @@ pre[class*=language-] {font-size: 16px;margin-bottom: 30px;}
   .pager .home {flex: auto}
   .pager a{text-align: center !important; margin: 0 !important}
   .pager .next{}
+	body > a {position: relative;}
   main{width: 100%; padding: 10px}
   code[class*="language-"],
-  pre[class*="language-"], pre{margin-left: 0; white-space: pre-wrap; word-break: break-word}
-}
-@media screen and (max-width: 1000px) {
-	body > a {position: relative;}
-	main{width: 100%; padding: 10px}
-	code[class*="language-"],
-	pre[class*="language-"], pre{margin-left: 0; white-space: pre-wrap; word-break: break-word}
+  pre[class*="language-"], pre{margin-left: 0}
 }
 </style>
 <link href=/atom.xml rel=alternate type=application/atom+xml>
