--- a/src/_includes/learning_zig.liquid
+++ b/src/_includes/learning_zig.liquid
@@ -56,7 +56,7 @@ pre[class*=language-] {font-size: 16px;margin-bottom: 30px;}
   .pager .next{}
   main{width: 100%; padding: 10px}
   code[class*="language-"],
-  pre[class*="language-"], pre{margin-left: 0; white-space: pre-wrap; word-break: break-word}
+  pre[class*="language-"], pre{margin-left: 0}
 }
 </style>
 <main>{{ content }}</main>
