better mobile display of index

--- a/src/index.njk
+++ b/src/index.njk
@@ -17,8 +17,8 @@ ul{font-size: 85%; list-style:none; display: flex; justify-content: right;}
 ul a{display: inline-block; padding: 10px 20px}
 
 main{margin: 5px auto;padding: 10px 0 0 20px;max-width: 760px}
-main > a {display: flex; padding: 0 10px; line-height: 40px;}
-main > a > b {font-weight: normal;font-size: 18px;color: #666;margin-left: auto; }
+main > a {display: flex; padding: 0 10px 15px; line-height: 28px;}
+main > a > b {font-weight: normal;font-size: 18px;color: #666;margin-left: auto;white-space: nowrap}
 
 @media screen and (max-width: 800px) {
 	main{margin-right: 10px}
