--- a/src/_includes/post.liquid
+++ b/src/_includes/post.liquid
@@ -24,7 +24,7 @@ h1 {font-size: 28px;}
 h2 {font-size: 24px;}
 h3 {font-size: 20px;}
 
-p code {padding: 0px 3px;border-radius: 5px;background: #fffce3;border: 1px solid #e9e9e5;}
+p code, li code {padding: 0px 3px;border-radius: 5px;background: #fffce3;border: 1px solid #e9e9e5;}
 code br {border: 1px solid red}
 
 .pager {display: flex;}
