--- a/src/index.njk
+++ b/src/index.njk
@@ -26,7 +26,7 @@ main > a > b {font-weight: normal;font-size: 18px;color: #666;margin-left: auto;
 	div.s{margin: 10px 0}
 }
 </style>
-<ul><li><a href=atom.xml>rss</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://www.aolium.com/karlseguin>aolium</a><li><a href=https://www.github.com/karlseguin>github</a></ul>
+<ul><li><a href=atom.xml>rss</a><li><a href=mailto:blog@karlseguin.com>contact</a><li><a href=https://www.github.com/karlseguin>github</a></ul>
 <main>
 {%- set posts = all_posts(collections.all, aolium) -%}
 {%- for post in posts %}
